$ Refactoring ini/keys in libraries/J/Installer/component 
$ Refactoring ini/keys in libraries/J/Installer/file
$ Refactoring ini/keys in libraries/J/Installer/language
$ Refactoring ini/keys in libraries/J/Installer/library
$ Refactoring ini/keys in libraries/J/Installer/module
# Fixing logout -which also fixes mod_logged- (Thank you Dennis!)
# Fixing Toggle menu item selection in com_modules


20-Apr-2010 Mark Dexter
# Fix PHP notice in mod_logged 
^ Change name of component parameter from show_page_title to show_page_heading
# Fixed parameters in content views (Angie Radtke)
# Make global content parameters consistent with layouts, fix language tags 
# Fix parameter merge for content single category menu items
# Fix param and language bugs in featured view
# Fix parameter priority for single article view 
# Fix issue where an existing featured article could not be saved (Elin Waring)

20-Apr-2010 Andrew Eddie
 ^ Rename JModel _populateState to populateState, _getStoreId to getStoreId, _getListQuery to getListQuery.
 
20-Apr-2010 Christophe Demko
^+ Enhancing pluralisation of strings

20-Apr-2010 Sam Moffatt
 ! EOL and Keywords bulk set

19-Apr-2010 Jean-Marie Simonet
#$ Refactoring mod_logged. TODO: correct forcelogout.

19-Apr-2010 Mark Dexter
# Fix diff_15_to_16.sql for database changes
# Fix index in contact_details table

19-Apr-2010 Christophe Demko
# Reenabling filters in plugins and manage view
^ Speeding up manage and discover view in com_installer
^ Speeding up modules and plugins view

19-Apr-2010 Jean-Marie Simonet
^ Changing JText::__ to JText::plural
$ Toolbar change to Publish/Unpublish in com_modules
^ Fixed readonly list [20179]. (Thanks Artyom)
$ Refactoring ini/keys in libraries/J/html. Consolidated some strings.

18-Apr-2010 Ron Severdia
# Clean up CSS for BlueStork
# Clean up UI for Permissions Editor in Global Config.

18-Apr-2010 Mark Dexter
# Fix parse error in libraries/joomla/form/form.php