@@ -87,6 +87,8 @@ class JFormFieldModulePosition extends JFormFieldList
 		}
 		$positions = array_unique($positions);
 		sort($positions);
+		
+		$options[] = JHtml::_('select.option', '', JText::_('COM_MODULES_OPTION_SELECT_POSITION'));
 
 		foreach ($positions as $position) {
 			$options[]	= JHtml::_('select.option', $position, $position);
@@ -94,6 +96,16 @@ class JFormFieldModulePosition extends JFormFieldList
 
 		// Merge any additional options in the XML definition.
 		$options = array_merge(parent::getOptions(), $options);
+		
+		// Add javascript for custom position selection
+		JFactory::getDocument()->addScriptDeclaration('
+			function setModulePosition(el) {
+				if ($("jform_custom_position")) {
+					$("jform_custom_position").style.display = (!el.value.length) ? "block" : "none";
+				}
+			}
+			window.addEvent("domready", function() {setModulePosition($("jform_position"))});
+		');
 
 		return $options;
 	}
