@@ -58,7 +58,7 @@ COM_MODULES_OPTION_ORDER_POSITION="%d. %s"
 
 COM_MODULES_FIELD_MODULE_DESC="Module type"
 COM_MODULES_FIELD_MODULE_LABEL="Module"
-COM_MODULES_FIELD_POSITION_DESC="You may select a module position from the dropdown box of pre-defined positions or enter your own module position by typing in the name."
+COM_MODULES_FIELD_POSITION_DESC="You may select a module position from the dropdown box of pre-defined positions or enter your own module position by clicking on the 'Select position', typing in the name and Save."
 COM_MODULES_FIELD_POSITION_LABEL="Position"
 COM_MODULES_FIELD_SHOWTITLE_DESC="Show/Hide module title on display. Effect will depend on the chrome style in the template."
 COM_MODULES_FIELD_SHOWTITLE_LABEL="Show Title"
